<resources>
    <string name="app_name">计算器</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">×</string>
    <string name="into">÷</string>
    <string name="radix_point">.</string>
    <string name="clean_up">C</string>
    <string name="backSpace">←</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="percent">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="radical_sign">√</string>
    <string name="power">^</string>
    <string name="pi">π</string>
    <string name="natural_constant">e</string>
</resources>