<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_alignParentBottom="true"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:stretchColumns="*">
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:textSize="24sp"
            android:singleLine="true"
            android:id="@+id/number_edit"/>
    </TableRow>
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
        <Button
            android:id="@+id/clean_up"
            android:text="@string/clean_up"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/into"
            android:text="@string/into"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/times"
            android:text="@string/times"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/backSpace"
            android:text="@string/backSpace"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
    </TableRow>
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/minus"
            android:text="@string/minus"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
    </TableRow>
    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
        <Button
            android:id="@+id/four"
            android:text="@string/four"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/five"
            android:text="@string/five"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/six"
            android:text="@string/six"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
    </TableRow>

    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
        <Button
            android:id="@+id/one"
            android:text="@string/one"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/two"
            android:text="@string/two"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/percent"
            android:text="@string/percent"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
    </TableRow>

    <TableRow android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1">
        <Button
            android:id="@+id/radix_point"
            android:text="@string/radix_point"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/equal"
            android:text="@string/equal"
            android:layout_span="2"
            android:layout_height="match_parent"
            android:textSize="24sp"/>
    </TableRow>

</TableLayout>